--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,16 @@ readme = "README.md"
 python = "^3.11"
 
 
+[tool.poetry.group.tests.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.14.1"
+pre-commit = "^4.0.1"
+ruff = "^0.9.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
