--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,8 +2,14 @@ repos:
   - repo: local
     hooks:
       - id: ruff
-        name: ruff
-        entry: poetry run ruff
+        name: ruff-format
+        entry: poetry run ruff format
+        require_serial: true
+        language: system
+        types: [python]
+      - id: ruff
+        name: ruff-check
+        entry: poetry run ruff check
         require_serial: true
         language: system
         types: [python]
@@ -25,3 +31,4 @@ repos:
         pass_filenames: false
         files: '^src(/[^/]*)*/[^/]*\.py$'
         language: system
+
