--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+click = "^8.1.8"
 
 
 [tool.poetry.group.tests.dependencies]
@@ -18,6 +19,9 @@ pytest-cov = "^6.0.0"
 mypy = "^1.14.1"
 pre-commit = "^4.0.1"
 ruff = "^0.9.1"
+
+[tool.poetry.scripts]
+bf = "brainfck_interpreter.interpret:interpret_command"
 
 [build-system]
 requires = ["poetry-core"]
