--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ ruff = "^0.9.1"
 [tool.poetry.scripts]
 bf = "brainfck_interpreter.interpret:interpret_command"
 
+[tool.ruff]
+line-length = 120
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
