--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,20 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+click = "^8.1.8"
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.14.1"
+pre-commit = "^4.0.1"
+ruff = "^0.9.1"
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+
+[tool.poetry.scripts]
+bf = "brainfck_interpreter.interpret:interpret_command"
+
+[tool.ruff]
+line-length = 120
 
 [build-system]
 requires = ["poetry-core"]
